--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,3 +28,5 @@ body {
     margin: 1rem auto; /* Center the container */
     width: fit-content; /* Shrink-wrap to content */
 }
+
+.background_image
